Group-replication.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: "mysql"
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi


# once pods are running then exec into pod:
# kubectl exec -it mysql-0 -- bash

# Start MySQL and configure group replication inside the container:
#-- On mysql-0
# SET GLOBAL group_replication_bootstrap_group=ON;
# START GROUP_REPLICATION;
# SET GLOBAL group_replication_bootstrap_group=OFF;

# -- On mysql-1 and mysql-2
# START GROUP_REPLICATION;
