headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  clusterIP: None         # <-- Headless
  selector:
    app: mysql
  ports:
  - port: 3306
